fix: overflowing problem

--- a/src/app/left-panel/LeftPanel.module.scss
+++ b/src/app/left-panel/LeftPanel.module.scss
@@ -1,6 +1,6 @@
 .container {
-  width: 200px;
   border-right: 1px solid var(--gray5);
+  height: 100%;
 }
 
 .inputContainer {
@@ -85,7 +85,8 @@ button {
   line-height: 1;
   color: var(--violet11);
   background-color: white;
-  box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px, hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
+  box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px,
+    hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
   user-select: none;
   animation-duration: 400ms;
   animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
