--- a/src/app/root-layout/RootLayout.module.scss
+++ b/src/app/root-layout/RootLayout.module.scss
@@ -4,3 +4,16 @@
   width: 100%;
   height: 100vh;
 }
+
+.Content {
+  @apply flex flex-1;
+}
+
+.Left {
+  width: 200px;
+}
+
+.Right {
+  @apply flex flex-1 flex-col;
+  min-width: 0;
+}
