--- a/src/app/styler-panel/StylerPanel.module.scss
+++ b/src/app/styler-panel/StylerPanel.module.scss
@@ -1,7 +1,6 @@
 .root {
   @apply flex flex-col bg-white overflow-y-auto;
   width: 200px;
-  height: 100%;
 }
 
 .scroll-list-box {
